@startuml

title __ASPROJ's Class Diagram__\n

  namespace com.example.asproj {
    class com.example.asproj.HiApplication {
        + onCreate()
    }
  }
  

  namespace com.example.asproj {
    class com.example.asproj.MainActivity {
        + onSaveInstanceState()
        # onCreate()
    }
  }
  

  com.example.asproj.HiApplication -up-|> com.example.common.uicomponent.HiBaseApplication
  com.example.asproj.MainActivity .up.|> com.example.asproj.logic.MainActivityLogic.ActivityProvider
  com.example.asproj.MainActivity -up-|> com.example.common.uicomponent.HiBaseActivity
  com.example.asproj.MainActivity o-- com.example.asproj.logic.MainActivityLogic : activityLogic


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
